--- a/tests/cases/includes.html
+++ b/tests/cases/includes.html
@@ -1,1 +1,1 @@
-{% if alpha %}{{ alpha }}, {% endif %}{{ first }}, and {{ second }} are delicious.
+{% if alpha %}{{ alpha }}, {% endif %}{{ data.first }}, and {{ data.second }} are delicious.
